tests/NormalTests/paczka1/fuzzy1/41675804.err
Error in line 1: KIyg A864 79,5
Error in line 7: S987 S674 41,9
Error in line 9: S987 S987 71,8
Error in line 29: S987 A864 49,2
Error in line 34: BTpwWp5tN A864 2,7
Error in line 36: BTpwWp5tN S987 20,0
